--- a/wp-content/themes/harvsworld/assets/less/components/_wp-classes.less
+++ b/wp-content/themes/harvsworld/assets/less/components/_wp-classes.less
@@ -15,6 +15,13 @@ figure.alignnone {
   max-width: 100%;
 }
 
+img.alignright,
+img.alignleft,
+img.aligncenter,
+.wp-caption {
+  max-width: 100%;
+}
+
 @media (min-width: @screen-sm-min) {
   // Only float images if not on an extra small device like smartphones
   .alignleft {
