--- a/wp-content/themes/harvsworld/assets/less/layouts/_header.less
+++ b/wp-content/themes/harvsworld/assets/less/layouts/_header.less
@@ -3,3 +3,7 @@
     border-bottom: 1px solid lighten(@brand-primary, 40%);
     box-shadow: 0 0 5px 2px #000;
 }
+
+.navbar-brand {
+    font-family: @headings-font-family;
+}
